--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css"> </link>
+    <link rel="stylesheet" href="style.css"> </link>
     <title>Flashcard</title>
 </head>
+<body>
 <main>
+  
     <section id="container">
         <article class="cartao">
            <div class="cartao_conteudo"> 
@@ -34,7 +36,8 @@
  </article>
       </section>
 </main>
-<body>
-    
+  <footer>
+    Projeto desenvolvido sem fins lucrativos.
+  </footer>
 </body>
 </html>
